--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,6 +14,7 @@
     {% endif %}
     {% endwith %}
 
+
     <!-- <div class="center"></div> -->
 
   <div class="container text-white window-bg">
@@ -30,7 +31,8 @@
     </div>
   </marquee>
 
-<div class="container text-white text-window mt-5">
+<div class="container text-white text-window mt-5"
+style="background-color: blueviolet";>
   <div class="row">
     <div class="col text-center mt-2">
         <h1>Getting Started</h1>
@@ -38,7 +40,7 @@
   </div>
 
   <div class="row">
-    <div class="col offset-3">
+    <div class="col offset-2"">
         <li>
           Step 1: If you haven't already, register to create an account in the navbar above. <br>
       </li>
