--- a/templates/login-page.html
+++ b/templates/login-page.html
@@ -6,7 +6,7 @@
 
 <div class="container mt-4">
   <div class="offset-4 mt-5">
-    <div class="col">
+    <div class="col-4">
       <h1 class="text-white">Log In</h1>
       <form action="/handle-login" method="POST" class="text-white">
         <p>
@@ -19,14 +19,14 @@
         </p>
         <p>
           Password <input
-          type="text"
+          type="password"
           class="form-control"
           id="basicTextInput"
           name="password"
         >
         </p>
         <p>
-          <input type="submit">
+          <input class="custom-button-1" type="submit">
         </p>
       </form>
     </div>
