--- a/templates/registration.html
+++ b/templates/registration.html
@@ -15,9 +15,9 @@
     {% endwith %}
 
 <div class="container text-white mt-4">
-  <div class="col offset-6">
+  <div class="col-4 offset-4">
     <div class="row">
-      <h2>Sign up here:</h2>
+      <h2>Register Account</h2>
       <form action="/register-user" method="POST">
         <p>
           E-mail<input
@@ -30,7 +30,7 @@
 
         <p>
           Password <input
-          type="text"
+          type="password"
           class="form-control"
           id="basicTextInput"
           name="password"
@@ -47,7 +47,7 @@
         </p>
 
         <p>
-          <input type="submit">
+          <input class="custom-button-1" type="submit">
         </p>
       </form>
     </div>
