--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
         <title>
             {% block title %}{% endblock %}
         </title>
+
         {% block kaboomcdn %}{% endblock %}
         {% block head %}{% endblock %}
 
@@ -27,17 +28,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
+                  <a class="nav-link line-wipe" href="/">Home <span class="sr-only"></span></a>
                 </li>
 
                 {% if 'email' not in session %}
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="/log-in">Login<span class="sr-only"></span></a>
+                    <a class="nav-link line-wipe" href="/log-in">Login<span class="sr-only"></span></a>
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="/registration">Register<span class="sr-only"></span></a>
+                    <a class="nav-link line-wipe" href="/registration">Register<span class="sr-only"></span></a>
                 </li>
 
                 {% endif %}
@@ -64,11 +65,11 @@
                 </li>
 
                 <li class="nav-item active">
-                  <a class="nav-link" href="https://discord.gg/nGYYXgKf" target="_blank">Discord<span class="sr-only"></span></a>
+                  <a class="nav-link line-wipe" href="https://discord.gg/nGYYXgKf" target="_blank">Discord<span class="sr-only"></span></a>
                 </li>
 
                 <li class="nav-item active">
-                  <a class="nav-link" href="/about-author" target="_blank">About<span class="sr-only"></span></a>
+                  <a class="nav-link line-wipe" href="/about-author" target="_blank">About<span class="sr-only"></span></a>
                 </li>
                 {% endif %}
               </ul>
@@ -83,7 +84,6 @@
             </div>
           </nav>
 
-
          </div>
     </head>
     <body>
@@ -95,11 +95,9 @@
         {% block after_body %}{% endblock %}
         {% block login %}{% endblock %}
         {% block aboutme %}{% endblock %}
-
-        <video autoplay loop muted playsinline id="bgvid">
-          <source src="static/css/wallpaper.mp4" type="video/mp4">
-        </video>
-
+          <video autoplay loop muted playsinline id="bgvid">
+            <source src="static/css/landing-page.mp4" type="video/mp4">
+          </video>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
