--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -4,7 +4,7 @@
 
 {% block profile %}
 
-<div class="center">
+<div>
     <h1 id="new-name">{{ user.user_display_name }}'s Profile!</h1>
 </div> 
 <br>
@@ -14,14 +14,30 @@ Update Display Name:
 <span class=display_name_{{ user.user_id }}> </span>
 
 
-
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<canvas id="totals-chart"></canvas><br>
-<canvas id="game1-chart"></canvas>
-<canvas id="game2-chart"></canvas>
-<canvas id="game3-chart"></canvas>
 
 
+<div class="container align-items-center">
+    <div class="row offset-3">
+        <div class="col-6">
+            <canvas id="totals-chart" width="600" height="400"></canvas>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <canvas id="game1-chart" width="350" height="300"></canvas>
+        </div>
+        <div class="col-4">
+            <canvas id="game2-chart" width="350" height="300"></canvas>
+        </div>
+        <div class="col-4">
+            <canvas id="game3-chart" width="350" height="300"></canvas>
+        </div>
+    </div>
+</div>
 
 
 <script src="/static/js/player-metrics.js"></script>
