charts styled and labeled

--- a/templates/game-page-3.html
+++ b/templates/game-page-3.html
@@ -18,15 +18,15 @@
 
     <div class="game-summary">
         <b>[CLASSIFIED] Responsibility Rain</b> <br><br>
-        After a long day, one can only hope for precious dreams <br>
-        of life outside of the norm. Remain lazy, remain in bed. <br>
-        But don’t let the intrusive thoughts around your chores <br>
-        ruin your day, avoid them at all costs. On the flip side, <br>
-        keep the good vibes going and lucid dream your next <br>
+        After a long day, one can only hope for precious dreams 
+        of life outside of the norm. Remain lazy, remain in bed. 
+        But don’t let the intrusive thoughts around your chores 
+        ruin your day, avoid them at all costs. On the flip side, 
+        keep the good vibes going and lucid dream your next 
         vacation, etc. <br><br>
 
-        Upon every dream-thought you come into contact with, a <br>
-        mysterious and beautiful image overwhelms the background of <br>
+        Upon every dream-thought you come into contact with, a 
+        mysterious and beautiful image overwhelms the background of
         your mind. <br><br>
 
         Ahh, to sleep well. 
