--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -10,7 +10,7 @@
             <img src='static/css/selife.JPG'>
         </div>
         
-        <div class="col-5 mt-5 offset+4">
+        <div class="col-5 mt-5 offset+4 text-window">
             <h1>Who am I?</h1><br>
             <p>
                 Jake is a fullstack software engineer, born in the Bay Area. Their hobbies include yarn-craft, video games, and lounging with their dogs.
