--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -11,7 +11,7 @@
 <div class="text-white" style="margin-left: 10px" id="user-high-score">HIGHEST SCORE: {{ score }}</div><br>
 <div class='text-white' style="margin-left: 10px">Update Display Name: 
 </div>
-<button class="update-display-name text-white" style="margin-left: 10px" id={{ user.user_id }}> Edit Name </button><br><br>
+<button class="update-display-name custom-button-1" style="margin-left: 10px" id={{ user.user_id }}> Edit Name </button><br><br>
 <span class=display_name_{{ user.user_id }}> </span>
 
 
