--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -31,8 +31,7 @@
     </div>
   </marquee>
 
-<div class="container text-white text-window mt-5"
-style="background-color: blueviolet";>
+<div class="container text-white text-window mt-5">
   <div class="row">
     <div class="col text-center mt-2">
         <h1>Getting Started</h1>
