--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
         {% block kaboomcdn %}{% endblock %}
         {% block head %}{% endblock %}
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding-top: 25px; padding-bottom: 25px">
-            <a class="navbar-brand" href="/">1-Up.Games</a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding-top: 25px; padding-bottom: 25px" id="navbar-margin">
+            <a class="navbar-brand" href="#"><img width="30" height="30" src="static/css/icon.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
