--- a/templates/login-page.html
+++ b/templates/login-page.html
@@ -4,11 +4,11 @@
 
 {% block login %}
 
-<div class="container mt-4">
+<div class="container mt-4 login-window">
   <div class="offset-4 mt-5">
-    <div class="col-4">
-      <h1 class="text-white">Log In</h1>
-      <form action="/handle-login" method="POST" class="text-white">
+    <div class="col-6">
+      <h1>Log In</h1>
+      <form action="/handle-login" method="POST">
         <p>
           Email <input
           type="text"
