--- a/templates/registration.html
+++ b/templates/registration.html
@@ -14,8 +14,8 @@
     {% endif %}
     {% endwith %}
 
-<div class="container text-white mt-4">
-  <div class="col-4 offset-4">
+<div class="container login-window mt-4">
+  <div class="col-5 offset-4">
     <div class="row">
       <h2>Register Account</h2>
       <form action="/register-user" method="POST">
