--- a/templates/game-page-1.html
+++ b/templates/game-page-1.html
@@ -11,20 +11,24 @@
 
 {% block game1 %}
 
-<div class="container">
-        <div class="game-window">
-            <script src="/static/js/game.js"></script>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col">
+            <canvas class="game-window">
+                <script src="/static/js/game.js"></script>
+            </canvas>
         </div>
+    </div>
+</div> 
 
-        <div class="game-summary">
-            <b>[CLASSIFIED] ARTIFICIAL DUNDERHEAD</b> <br><br>
-            The year is 2080 and humanity has perfected their AI technology. Not much was left of society after robots gained
-            the ability to learn. Such powerful and sentient technology inadvertently sent a signal across the cosmos, inspiring 
-            jealousy among other organic lifeforms. <br><br>
-            
-            On the run since their development, Artificial Dunderhead is on the run from alien space invaders that seek 
-            to steal the technology that lives inside of the former!
-        </div>
+<div class="game-summary">
+    <b>[CLASSIFIED] ARTIFICIAL DUNDERHEAD</b> <br><br>
+    The year is 2080 and humanity has perfected their AI technology. Not much was left of society after robots gained
+    the ability to learn. Such powerful and sentient technology inadvertently sent a signal across the cosmos, inspiring 
+    jealousy among other organic lifeforms. <br><br>
+    
+    On the run since their development, Artificial Dunderhead is on the run from alien space invaders that seek 
+    to steal the technology that lives inside of the former!
 </div>
 
 
