--- a/templates/game-page-2.html
+++ b/templates/game-page-2.html
@@ -11,7 +11,7 @@
 
 {% block game1 %}
 
-<div class="container">
+<div class="container mt-3">
     <div class="game-window">
         <script src="/static/js/game2.js"></script>
     </div>
