--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -4,43 +4,63 @@
 
 {% block profile %}
 
-<div>
-    <h1 id="new-name" class="text-white">{{ user.user_display_name }}'s Profile!</h1>
-</div> 
-<br>
-<div class="text-white" style="margin-left: 10px" id="user-high-score">HIGHEST SCORE: {{ score }}</div><br>
-<div class='text-white' style="margin-left: 10px">Update Display Name: 
-</div>
-<button class="update-display-name custom-button-1" style="margin-left: 10px" id={{ user.user_id }}> Edit Name </button><br><br>
-<span class=display_name_{{ user.user_id }}> </span>
-
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-
-<div class="container align-items-center" style="background-color: black; opacity: 75%;">
-    <div class="row offset-3">
-        <div class="col-6">
-            <canvas style="padding: 10px;" id="totals-chart" width="600" height="400"></canvas>
+<div class="container mt-4 profile-window">
+    <div class="row">
+        <div class="col-7">
+            <h1 id="new-name">{{ user.user_display_name }}'s Profile!</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            HIGHEST SCORE: {{ score }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col mt-3">
+            <button class="update-display-name custom-button-1" id={{ user.user_id }}> Update Display Name </button>
+        </div>
+        <div class="col-7">
+            <canvas style="padding: 10px;" id="totals-chart" width="400" height="300"></canvas>
         </div>
     </div>
 </div>
 
-<div class="container" style="background-color: black; opacity: 75%;">
+<div class="container mt-4 charts-window">
+    <div class="row">
+        <div class="col">
+            <h1>Score Data</h1>
+        </div>
+    </div>
     <div class="row">
         <div class="col-4">
             <canvas style="padding: 10px;" id="game1-chart" width="350" height="300"></canvas>
         </div>
-        <div class="col-4">
-            <canvas style="padding: 10px;" id="game2-chart" width="350" height="300"></canvas>
+        <div class="col-5 offset-3">
+            <img src="/static/css/game1-screencap.png" alt="Image description">
         </div>
+    </div>
+    <div class="row">
+        <div class="col-5 offset-1">
+            <img src="/static/css/game2-screencast.png" alt="Image description">
+        </div>
+        <div class="col-6">
+            <canvas style="padding: 10px;" id="game2-chart" width="375" height="300"></canvas>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-4">
             <canvas style="padding: 10px;" id="game3-chart" width="350" height="300"></canvas>
+        </div>
+        <div class="col-5 offset-3">
+            <img src="/static/css/game3-screencap.png" alt="Image description">
         </div>
     </div>
 </div>
 
 
+
+<span class=display_name_{{ user.user_id }}> </span>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="/static/js/player-metrics.js"></script>
 <script src="/static/js/display-name-update.js"></script>
 {% endblock %}
