--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,7 +31,7 @@
 }
 
 .profile-window {
-    height: 450px;
+    height: 575px;
     background: linear-gradient(#DAC6FF, #E6D9FF, #F3EBFF);
     border-radius: 25px;
     padding: 20px; 
@@ -57,6 +57,16 @@
     padding: 20px; 
     opacity: 90%;
     width: 1100px;
+    /* margin-top:100px; */
+}
+
+.aboutme-window {
+    height: 375px;
+    background: linear-gradient(#DAC6FF, #E6D9FF, #F3EBFF);
+    border-radius: 25px;
+    padding: 20px; 
+    opacity: 90%;
+    width: 900px;
     /* margin-top:100px; */
 }
 
@@ -148,6 +158,7 @@ h3 {
 img {
     max-width: 75%;
     max-height: 75%;
+    margin-top: 10px;
 }
 
 .game-window {
@@ -156,7 +167,7 @@ img {
 
 .game-summary {
     position: absolute;
-    top: 115px;
+    top: 130px;
     left: 1015px;
     color: white;
 }
