--- a/templates/player-profile.html
+++ b/templates/player-profile.html
@@ -35,12 +35,12 @@
         <div class="col-4">
             <canvas style="padding: 10px;" id="game1-chart" width="350" height="300"></canvas>
         </div>
-        <div class="col-5 offset-3">
+        <div class="col-5 mt-5 offset-3">
             <img src="/static/css/game1-screencap.png" alt="Image description">
         </div>
     </div>
     <div class="row">
-        <div class="col-5 offset-1">
+        <div class="col-5 mt-5 offset-1">
             <img src="/static/css/game2-screencast.png" alt="Image description">
         </div>
         <div class="col-6">
@@ -51,7 +51,7 @@
         <div class="col-4">
             <canvas style="padding: 10px;" id="game3-chart" width="350" height="300"></canvas>
         </div>
-        <div class="col-5 offset-3">
+        <div class="col-5 mt-5 offset-3">
             <img src="/static/css/game3-screencap.png" alt="Image description">
         </div>
     </div>
