--- a/templates/profile-search-results.html
+++ b/templates/profile-search-results.html
@@ -4,16 +4,17 @@
 
 {% block searchResults %}
 
-<div class="container mt-4" style="background-color: black;">
-   <div class="row">
-      <div class="col-10">
-         <h1 class="text-white">Profile Search Results:</h1>
-      </div>
-   </div>
+<div class="container mt-4"">
+   
 </div>
 
 
-<div class="container" style="background-color: black;">
+<div class="container search-window">
+   <div class="row">
+      <div class="col-10">
+         <h1>Profile Search Results:</h1>
+      </div>
+   </div>
    <div class="row">
       <div class="col offset">
          {% for users in user_data %}
